--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=local nodemon src/ --exec babel-node --presets es2015,stage-2"
+    "start": "cross-env NODE_ENV=local nodemon src/ --exec babel-node --presets es2015,stage-2",
+    "prod": "cross-env NODE_ENV=production nodemon src/ --exec babel-node --presets es2015,stage-2"
   },
   "author": "",
   "license": "ISC",
