--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
     "cross-env": "^5.1.4",
+    "dotenv": "^6.2.0",
     "express": "^4.16.3",
     "nodemon": "^1.17.4",
     "request": "^2.85.0"
