--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.3",
     "nodemon": "^1.17.4",
-    "request": "^2.85.0"
+    "request": "^2.85.0",
+    "sonos": "^1.9.0"
   }
 }
