--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "cross-env": "^5.1.4",
     "dotenv": "^6.2.0",
     "express": "^4.16.3",
+    "mqtt": "^2.18.8",
+    "mqtt-emitter": "^1.2.4",
     "nodemon": "^1.17.4",
     "request": "^2.85.0",
     "sonos": "^1.9.0"
