--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cross-env": "^5.1.4",
     "dotenv": "^6.2.0",
     "express": "^4.16.3",
+    "is-json": "^2.0.1",
     "mqtt": "^2.18.8",
     "mqtt-emitter": "^1.2.4",
     "nodemon": "^1.17.4",
