--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "mqtt": "^2.18.8",
     "mqtt-emitter": "^1.2.4",
     "nodemon": "^1.17.4",
+    "portscanner": "^2.2.0",
     "request": "^2.85.0",
-    "sonos": "^1.9.0"
+    "sonos": "^1.9.0",
+    "tcp-port-used": "^1.0.1"
   }
 }
